2014-06-05  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpmemory.c:
    Fix memory leak in b_memory_put() function.

2014-06-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * lkr/16f1718_g.lkr, lkr/16lf1718_g.lkr, lkr/16f1719_g.lkr,
    lkr/16lf1719_g.lkr:
    Bugfix: Changed the grp20 to gpr20.

2014-05-31  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    Simpler gp_dump_processor_list() and fixed reloc_tris_pic12() functions.

2014-05-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * libgputils/gpprocessor.c:
    Fixed bug: gpdasm does not recognize the PIC12E instructions.

2014-05-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/testsuite/gpdasm.project/op14e.asm,
    gputils/testsuite/gpdasm.project/op16e.asm:
    updated

  * gpasm/directive.c, libgputils/gpcfg.c, libgputils/gpcofflink.c
    libgputils/gpcoffopt.c, libgputils/gpdis.c, libgputils/gpprocessor.c,
    libgputils/gpprocessor.h:
    Some simplification. This codes uses some new definitions.

2014-05-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/directive.c, libgputils/gpopcode.c, libgputils/gpopcode.h,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    The instruction codes were given own definition.

2014-05-28  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gpasm/Makefile.am, gpasm/Makefile.in, gplink/Makefile.am,
    gplink/Makefile.in:
    Minor update.

  * gpasm/coff.c, gpasm/directive.c, gpasm/evaluate.c,
    gpasm/gperror.c, gpasm/gperror.h, gpasm/parse.y,
    gpasm/ppscan.l, gpasm/preprocess.c, gpasm/processor.c,
    gpasm/scan.l, gpasm/special.c, gpasm/util.c,
    gplink/gplink.c, gplink/lst.c, libgputils/gpcofflink.c,
    libgputils/gpmemory.c, libgputils/gpmemory.h,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h,
    libgputils/gpreadhex.c, libgputils/gpreadobj.c,
    libgputils/gpsymbol.c, libgputils/gpsystem.c: