@@ -1,4 +1,8 @@
 2014-06-05  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * libgputils/gpsymbol.c:
+    Fix memory leak in remove_symbol() function.
+
+2014-06-05  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * libgputils/gpmemory.c:
     Fix memory leak in b_memory_put() function.
 
